Add support for new Modals (#308)
* rename select menu annotations

* remove TextInput annotation

* remove ModalBuilder

* add support for new modals

* move mapping handover to event class

* add documentation

* first pass on modal mapping

* Revert "first pass on modal mapping"

This reverts commit a5eac6742d36759e47c90478cc6dcab896355dff.

* add proteus convenience methods

* address review